--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,10 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:finishOnTaskLaunch="true"
+            android:theme="@android:style/Theme.NoDisplay"
+            android:name=".service.shortcut.ShortcutsActivity"/>
         <service
             android:name=".service.foreground.ForegroundService"
             android:enabled="true"
@@ -66,7 +70,7 @@
         </service>
         <service
             android:exported="true"
-            android:name=".service.TunnelControlTile"
+            android:name=".service.tile.TunnelControlTile"
             android:icon="@drawable/shield"
             android:label="WG Tunnel"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
@@ -82,6 +86,7 @@
             android:name=".service.foreground.WireGuardTunnelService"
             android:permission="android.permission.BIND_VPN_SERVICE"
             android:enabled="true"
+            android:persistent="true"
             android:foregroundServiceType="remoteMessaging"
             android:exported="false">
             <intent-filter>
@@ -94,6 +99,7 @@
             android:name=".service.foreground.WireGuardConnectivityWatcherService"
             android:enabled="true"
             android:stopWithTask="false"
+            android:persistent="true"
             android:foregroundServiceType="location"
             android:permission=""
             android:exported="false">
