--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,8 @@
                 <category android:name="android.intent.category.LEANBACK_LAUNCHER" />
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES"/>
             </intent-filter>
+            <meta-data android:name="android.app.shortcuts"
+                android:resource="@xml/shortcuts" />
         </activity>
         <activity
             android:name=".ui.CaptureActivityPortrait"
@@ -67,6 +69,8 @@
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:finishOnTaskLaunch="true"
+            android:enabled="true"
+            android:exported="true"
             android:theme="@android:style/Theme.NoDisplay"
             android:name=".service.shortcut.ShortcutsActivity"/>
         <service
@@ -100,7 +104,7 @@
                 <action android:name="android.net.VpnService"/>
             </intent-filter>
             <meta-data android:name="android.net.VpnService.SUPPORTS_ALWAYS_ON"
-                android:value="true"/>
+                android:value="true" />
         </service>
         <service
             android:name=".service.foreground.WireGuardConnectivityWatcherService"
