fix: fdroid build and ssid comma
Fixes bug where commas in SSID names were splitting into multiple SSIDs due to database type converters.
Closes #48

Fixes bug where F-Droid pipeline was failing to build due to lack of proguard rule. Closes #47

Fixes bug where crashes could happen if config QR code or file has improperly configured data.

Bump versions.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,20 +14,20 @@ hiltNavigationCompose = "1.0.0"
 junit = "4.13.2"
 kotlinx-serialization-json = "1.5.1"
 lifecycle-runtime-compose = "2.6.2"
-material-icons-extended = "1.5.3"
+material-icons-extended = "1.5.4"
 material3 = "1.1.2"
 navigationCompose = "2.7.4"
-roomVersion = "2.6.0-rc01"
+roomVersion = "2.6.0"
 timber = "5.0.1"
 tunnel = "1.0.20230706"
 androidGradlePlugin = "8.3.0-alpha06"
 kotlin="1.9.10"
 ksp="1.9.10-1.0.13"
-composeBom="2023.10.00"
-firebaseBom="32.3.1"
-compose="1.5.3"
-crashlytics="18.4.3"
-analytics="21.3.0"
+composeBom="2023.10.01"
+firebaseBom="32.4.0"
+compose="1.5.4"
+crashlytics="18.5.0"
+analytics="21.4.0"
 composeCompiler="1.5.3"
 zxingAndroidEmbedded = "4.3.0"
 zxingCore = "3.4.1"
