--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -9,7 +9,14 @@ on:
 jobs:
   build:
     name: Build Signed APK
+    # change to macos because of hilt issues on ubuntu in gradle 8.3
     runs-on: ubuntu-latest
+
+    env:
+      KEY_STORE_PATH: ${{ secrets.KEY_STORE_PATH }}
+      SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+      SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+      SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
 
     steps:
       - uses: actions/checkout@v3
@@ -29,33 +36,22 @@ jobs:
         uses: timheuer/base64-to-file@v1.2
         with:
           fileName: 'android_keystore.jks'
-          fileDir: '/home/runner/work/wgtunnel/wgtunnel/app/keystore/'
+          fileDir: ${{ github.workspace }}/app/keystore/
           encodedString: ${{ secrets.KEYSTORE }}
+
+      - name: Create service_account.json
+        id: createServiceAccount
+        run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
 
       # Build and sign APK ("-x test" argument is used to skip tests)
       # add fdroid flavor for apk upload
       - name: Build Fdroid Release APK
         run: ./gradlew :app:assembleFdroidRelease -x test
-        env:
-          KEY_STORE_PATH: ${{ secrets.KEY_STORE_PATH }}
-          SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
-          SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
-          SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
 
       # get fdroid flavor release apk path
       - name: Get apk path
         id: apk-path
         run: echo "path=$(find . -regex '^.*/build/outputs/apk/fdroid/release/.*\.apk$' -type f | head -1)" >> $GITHUB_OUTPUT
-
-      # add general flavor for google play
-      - name: Build General Release AAB
-        id: buildRelease
-        run: ./gradlew bundleGeneralRelease
-        env:
-          KEY_STORE_PATH: ${{ secrets.KEY_STORE_PATH }}
-          SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
-          SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
-          SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
 
       # Save the APK after the Build job is complete to publish it as a Github release in the next job
       - name: Upload APK
@@ -63,38 +59,32 @@ jobs:
         with:
           name: wgtunnel
           path: ${{ steps.apk-path.outputs.path }}
-
-      - name: Create service_account.json
-        id: createServiceAccount
-        run: echo '${{ secrets.SERVICE_ACCOUNT_JSON }}' > service_account.json
-
-      # upload general flavor release aab to beta track
-      - name: Publish to Play Store BETA
-        id: publish
-        uses: r0adkll/upload-google-play@v1.1.2
-        with:
-          serviceAccountJson: service_account.json
-          packageName: com.zaneschepke.wireguardautotunnel
-          releaseFiles: app/build/outputs/bundle/generalRelease/app-general-release.aab
-          track: beta
-
-  release:
-    name: Release APK
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
       - name: Download APK from build
         uses: actions/download-artifact@v1
         with:
           name: wgtunnel
-      - name: Create Release
+      - name: Create Release with Fastlane changelog notes
         id: create_release
         uses: softprops/action-gh-release@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          # fix hardcode changelog file name
+          body_path: ${{ github.workspace }}/fastlane/metadata/android/en-US/changelogs/32100.txt
           tag_name: ${{ github.ref_name }}
           name: Release ${{ github.ref_name }}
           draft: false
           prerelease: false
-          files: wgtunnel/${{ steps.apk-path.outputs.path }}
+          files: ${{ github.workspace }}/${{ steps.apk-path.outputs.path }}
+  deploy:
+    name: Deploy with fastlane
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '3.2' # Not needed with a .ruby-version file
+          bundler-cache: true
+
+      - name: Distribute app to Beta track 🚀
+        run: (cd ${{ github.workspace }} && bundle install && bundle exec fastlane beta)
