--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,7 +21,7 @@ navigationCompose = "2.7.5"
 roomVersion = "2.6.0"
 timber = "5.0.1"
 tunnel = "1.0.20230706"
-androidGradlePlugin = "8.3.0-alpha06"
+androidGradlePlugin = "8.2.0-rc03"
 kotlin="1.9.10"
 ksp="1.9.10-1.0.13"
 composeBom="2023.10.01"
