--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,18 +10,18 @@ desugar_jdk_libs = "2.0.4"
 espressoCore = "3.5.1"
 firebase-crashlytics-gradle = "2.9.9"
 google-services = "4.4.0"
-hiltAndroid = "2.48.1"
+hiltAndroid = "2.49"
 hiltNavigationCompose = "1.1.0"
 junit = "4.13.2"
-kotlinx-serialization-json = "1.6.0"
+kotlinx-serialization-json = "1.6.2"
 lifecycle-runtime-compose = "2.6.2"
 material-icons-extended = "1.5.4"
 material3 = "1.1.2"
 navigationCompose = "2.7.5"
-roomVersion = "2.6.0"
+roomVersion = "2.6.1"
 timber = "5.0.1"
 tunnel = "1.0.20230706"
-androidGradlePlugin = "8.2.0-rc03"
+androidGradlePlugin = "8.2.0"
 kotlin="1.9.10"
 ksp="1.9.10-1.0.13"
 composeBom="2023.10.01"
