--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -63,6 +63,12 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: wgtunnel
+      - name: Repository Dispatch for my F-Droid repo
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.PAT }}
+          repository: zaneschepke/fdroid
+          event-type: fdroid-update
       - name: Create Release with Fastlane changelog notes
         id: create_release
         uses: softprops/action-gh-release@v1
